@@ -12,7 +12,7 @@ If you are working on something big and it may take a while, please tag it with 
 Contacts:
 	+ Allow specifying an image for a contact in the inspector (Independent of address book)
 	= Add area for typing contact notes to inspector, display notes in tooltip [Brian] 
-            // core functionality is done, now I'm adding info viewer support, AB syncing, and possibly AIM Buddy Note sycing
+            // core functionality is done, now I'm adding AB syncing, and possibly AIM Buddy Note sycing
 	+ Add keyboard shortcut for the 'add contact' menu item
 	+ Pass our aliases to libgaim so they get uploaded to the server
 	+ Context menus
@@ -43,12 +43,12 @@ Message Window:
 	+ Tab-complete usernames in messages and chat
 	+ Make 'save as' menu item work
 	+ Accept dragged items and do wonderful things on them, like if it is text append it in the input field or if it is a file send it to the contact.
-* Push/pop indicator could use 1-2 px extra spacing from the right & left since its nearly flush with the scrollbar 
+        * Push/pop indicator could use 1-2 px extra spacing from the right & left since its nearly flush with the scrollbar 
 	+ Finish SMV prefs if we're going to keep using them on 10.2
 	
 Contact List Display:
 	+ Small contact list icon to identify mobile device users
-	+ With offline contacts visible, hide the group counting 'visible' value.
+	= With offline contacts visible, hide the group counting 'visible' value.
 
 Other:
 	+ Create a plugin to hide the AIM "Your screen name is now signed in 2 locations" messages
